--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -14,6 +14,13 @@
       </ion-label>
     </ion-tab-button>
 
+    <ion-tab-button tab="timeline">
+      <ion-icon name="albums-outline"></ion-icon>
+      <ion-label>
+        {{ 'TAB2_TITLE' | translate }}
+      </ion-label>
+    </ion-tab-button>
+
     <ion-tab-button tab="account">
       <ion-icon name="send"></ion-icon>
       <ion-label>
