Various Frontend Changes

--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -10,7 +10,7 @@
     <ion-tab-button tab="entities">
       <ion-icon name="apps"></ion-icon>
       <ion-label>
-        {{ 'TAB2_TITLE' | translate }}
+        {{ 'TABx_TITLE' | translate }}
       </ion-label>
     </ion-tab-button>
 
