--- a/src/app/pages/entities/comment/comment-detail.html
+++ b/src/app/pages/entities/comment/comment-detail.html
@@ -1,36 +1,35 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-    <ion-title>
-      Comment
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button></ion-back-button>
+        </ion-buttons>
+        <ion-title>
+            Comment
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-list>
-    <ion-item>
-      <ion-label position="fixed">Comment Body</ion-label>
-      <div item-content>
-        <span>{{comment.commentBody}}</span>
-      </div>
-    </ion-item>
-    <ion-item>
-      <ion-label>Event</ion-label>
-      <div item-content *ngIf="comment.event">
-        <a>{{comment.event?.id}}</a>
-      </div>
-    </ion-item>
-    <ion-item>
-      <ion-label>Extended User</ion-label>
-      <div item-content *ngIf="comment.extendedUser">
-        <a>{{comment.extendedUser?.id}}</a>
-      </div>
-    </ion-item>
-  </ion-list>
+    <ion-list>
+        <ion-item>
+            <ion-label position="fixed">Comment Body</ion-label>
+            <div item-content>
+                <span>{{comment.commentBody}}</span>
+            </div>
+        </ion-item>
+        <ion-item>
+            <ion-label>Event</ion-label>
+            <div item-content *ngIf="comment.event">
+                <a>{{comment.event?.id}}</a>
+            </div>
+        </ion-item>
+        <ion-item>
+            <ion-label>User</ion-label>
+            <div item-content>{{comment.user?.login}}</div>
+        </ion-item>
+    </ion-list>
 
-  <ion-button expand="block" color="primary" (click)="open(comment)">{{ 'EDIT_BUTTON' | translate }}</ion-button>
-  <ion-button expand="block" color="danger" (click)="deleteModal(comment)">{{ 'DELETE_BUTTON' | translate }}</ion-button>
+    <ion-button expand="block" color="primary" (click)="open(comment)">{{ 'EDIT_BUTTON' | translate }}</ion-button>
+    <ion-button expand="block" color="danger" (click)="deleteModal(comment)">{{ 'DELETE_BUTTON' | translate }}</ion-button>
+
 </ion-content>
