--- a/src/app/pages/entities/comment/comment-update.html
+++ b/src/app/pages/entities/comment/comment-update.html
@@ -1,50 +1,47 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-    <ion-title>
-      Comment
-    </ion-title>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button></ion-back-button>
+        </ion-buttons>
+        <ion-title>
+            Comment
+        </ion-title>
 
-    <ion-buttons slot="end">
-      <ion-button [disabled]="!isReadyToSave" (click)="save()" color="primary">
-        <span *ngIf="platform.is('ios')">{{'DONE_BUTTON' | translate}}</span>
-        <ion-icon name="checkmark" *ngIf="!platform.is('ios')"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
+        <ion-buttons slot="end">
+            <ion-button [disabled]="!isReadyToSave" (click)="save()" color="primary">
+              <span *ngIf="platform.is('ios')">{{'DONE_BUTTON' | translate}}</span>
+              <ion-icon name="checkmark" *ngIf="!platform.is('ios')"></ion-icon>
+            </ion-button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
+
 <ion-content class="ion-padding">
-  <form *ngIf="form" name="form" [formGroup]="form" (ngSubmit)="save()">
-    <ion-list>
-      <ion-item [hidden]="!form.id">
-        <ion-label>ID</ion-label>
-        <ion-input type="hidden" id="id" formControlName="id" readonly></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label position="floating">Comment Body</ion-label>
-        <ion-input type="text" name="commentBody" formControlName="commentBody"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label>Event</ion-label>
-        <ion-select id="field_event" formControlName="event" [compareWith]="compareEvent">
-          <ion-select-option [value]="null"></ion-select-option>
-          <ion-select-option [value]="eventOption" *ngFor="let eventOption of events; trackBy: trackEventById"
-            >{{eventOption.id}}</ion-select-option
-          >
-        </ion-select>
-      </ion-item>
-      <ion-item>
-        <ion-label>Extended User</ion-label>
-        <ion-select id="field_extendedUser" formControlName="extendedUser" [compareWith]="compareExtendedUser">
-          <ion-select-option [value]="null"></ion-select-option>
-          <ion-select-option [value]="extendedUserOption" *ngFor="let extendedUserOption of extendedUsers; trackBy: trackExtendedUserById"
-            >{{extendedUserOption.id}}</ion-select-option
-          >
-        </ion-select>
-      </ion-item>
-    </ion-list>
-  </form>
+    <form *ngIf="form" name="form" [formGroup]="form" (ngSubmit)="save()">
+        <ion-list>
+            <ion-item [hidden]="!form.id">
+                <ion-label>ID</ion-label>
+                <ion-input type="hidden" id="id" formControlName="id" readonly></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-label position="floating">Comment Body</ion-label>
+                <ion-input type="text" name="commentBody" formControlName="commentBody"></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-label>Event</ion-label>
+                <ion-select id="field_event" formControlName="event" [compareWith]="compareEvent">
+                    <ion-select-option [value]="null"></ion-select-option>
+                    <ion-select-option [value]="eventOption" *ngFor="let eventOption of events; trackBy: trackEventById">{{eventOption.id}}</ion-select-option>
+                </ion-select>
+            </ion-item>
+            <ion-item>
+                <ion-label>User</ion-label>
+                <ion-select id="field_user" formControlName="user" [compareWith]="compareUser">
+                    <ion-select-option [value]="null"></ion-select-option>
+                    <ion-select-option [value]="userOption" *ngFor="let userOption of users; trackBy: trackUserById">{{userOption.login}}</ion-select-option>
+                </ion-select>
+            </ion-item>
+        </ion-list>
+    </form>
 </ion-content>
