--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -31,15 +31,17 @@
     </ion-item>
   </ion-list> -->
 
-  <ion-card *ngFor="let event of events; trackBy: trackId" button="true" (click)="navigateToEvent()">
-    <img src="{{event.eventImage}}" />
-    <ion-card-header>
-      <ion-card-title>{{event.title}}</ion-card-title>
-      <ion-card-subtitle>{{event.eventDate}}</ion-card-subtitle>
-    </ion-card-header>
-    <ion-card-content>
-      {{event.eventDescription}}
-    </ion-card-content>
+  <ion-card *ngFor="let event of events; trackBy: trackId" button="true">
+    <div (click)="navigateToEvent()">
+      <img src="{{event.eventImage}}" />
+      <ion-card-header>
+        <ion-card-title>{{event.title}}</ion-card-title>
+        <ion-card-subtitle>{{event.eventDate}}</ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content>
+        {{event.eventDescription}}
+      </ion-card-content>
+    </div>
     <ion-grid>
       <ion-row>
         <ion-col>
