Changed Tabs Icons - Fixed Share Icon - Updated Event Content

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -50,8 +50,8 @@
           </ion-item>
         </ion-col>
         <ion-col>
-          <ion-item class="ion-text-center" color="light" href="#">
-            <ion-label>Share</ion-label>
+          <ion-item class="ion-text-center" color="light">
+            <ion-label>Share</ion-label><ion-icon slot="end" name="share-social-outline"></ion-icon>
           </ion-item>
         </ion-col>
       </ion-row>
