--- a/src/app/pages/entities/event/event-content/event-content.page.html
+++ b/src/app/pages/entities/event/event-content/event-content.page.html
@@ -3,19 +3,42 @@
     <ion-item>
       <ion-icon slot="start" name="arrow-back-outline" (click)="goBack()"></ion-icon>
       <ion-title>{{event.title}}</ion-title>
+      <ion-chip>
+        <ion-label>{{event.category}}</ion-label>
+      </ion-chip>
     </ion-item>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <img src="{{event.eventImage}}" />
+  <ion-card-content>
+    {{event.eventDescription}}
+  </ion-card-content>
+  <ion-item>
+    <ion-note slot="start">Location</ion-note>
+    <ion-label>{{event.location}}</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-note slot="start">Creator</ion-note>
+    <ion-chip>
+      <ion-avatar>
+        <img src="{{event.owner.imageUrl}}">
+      </ion-avatar>
+      <ion-label>{{event.owner.firstName}} {{event.owner.lastName}}</ion-label>
+    </ion-chip>
+  </ion-item>
+  <!-- <ion-item>
+    <ion-note slot="start">Participants</ion-note>
+    <ion-label>{{event.participants}}</ion-label>
+  </ion-item> -->
   <ion-item-divider>
     Comments
   </ion-item-divider>
   <ion-list>
     <ion-item>
-      <ion-avatar slot="start">
-        <img src="">
+      <ion-avatar class="vertically-aligned" slot="start">
+        <img src="{{account?.imageUrl}}">
       </ion-avatar>
       <ion-label position="floating">Write a Comment</ion-label>
       <ion-textarea></ion-textarea>
@@ -35,7 +58,8 @@
         </ion-label>
       </ion-item>
       <ion-item-options side="end">
-        <ion-item-option color="danger" (click)="reportComment()">Report<ion-icon name="alert-circle-outline">
+        <ion-item-option color="danger" (click)="reportComment()">Report
+          <ion-icon name="alert-circle-outline">
           </ion-icon>
         </ion-item-option>
       </ion-item-options>
