--- a/src/app/pages/entities/event/event-content/event-content.page.scss
+++ b/src/app/pages/entities/event/event-content/event-content.page.scss
@@ -1,3 +1,18 @@
 .send_comment {
-    padding-top: 12%
+  padding-top: 12%
+}
+
+.secondary-text {
+  color: var(--ion-color-step-400, #999999)
+}
+
+ion-avatar img {
+  width: 100%;
+  height: 100%;
+  max-width: 30px;
+  max-height: 30px;
+}
+
+.vertically-aligned {
+    margin-top: 8.5%
 }
