--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -50,7 +50,7 @@
           </ion-item>
         </ion-col>
         <ion-col>
-          <ion-item class="ion-text-center" color="light">
+          <ion-item class="ion-text-center" color="light" (click)="copyEventLocation(event.id)">
             <ion-label>Share</ion-label><ion-icon slot="end" name="share-social-outline"></ion-icon>
           </ion-item>
         </ion-col>
