--- a/src/app/pages/entities/event/event-content/event-content.page.html
+++ b/src/app/pages/entities/event/event-content/event-content.page.html
@@ -28,6 +28,10 @@
       <ion-label>{{event.owner.firstName}} {{event.owner.lastName}}</ion-label>
     </ion-chip>
   </ion-item>
+  <ion-item>
+    <ion-note slot="start">Participants</ion-note>
+    <ion-label>{{event.participants}}</ion-label>
+  </ion-item>
   <!-- <ion-item>
     <ion-note slot="start">Participants</ion-note>
     <ion-label>{{event.participants}}</ion-label>
@@ -45,15 +49,15 @@
       <ion-icon class="send_comment" slot="end" name="send-outline"></ion-icon>
     </ion-item>
     <ion-item-divider></ion-item-divider>
-    <ion-item-sliding>
+    <ion-item-sliding *ngFor="let comment of comments">
       <ion-item>
         <ion-avatar slot="start">
-          <img src="">
+          <img src="{{comment.user.imageUrl}}">
         </ion-avatar>
         <ion-label>
-          <h3>Lorem ipsum</h3>
+          <h3>{{comment.user.firstName}} {{comment.user.lastName}}</h3>
           <ion-text color="dark">
-            <h5>H5: The quick brown fox jumps over the lazy dog</h5>
+            <h5>{{comment.commentBody}}</h5>
           </ion-text>
         </ion-label>
       </ion-item>
