--- a/src/app/pages/entities/event/event-content/event-content.page.html
+++ b/src/app/pages/entities/event/event-content/event-content.page.html
@@ -45,7 +45,7 @@
         <img src="{{account?.imageUrl}}">
       </ion-avatar>
       <ion-label position="floating">Write a Comment</ion-label>
-      <ion-textarea></ion-textarea>
+      <ion-textarea  [(ngModel)]="currentComment" ></ion-textarea>
       <ion-icon class="send_comment" slot="end" name="send-outline"></ion-icon>
     </ion-item>
     <ion-item-divider></ion-item-divider>
