--- a/src/app/pages/entities/event/event-content/event-content.page.html
+++ b/src/app/pages/entities/event/event-content/event-content.page.html
@@ -46,7 +46,7 @@
       </ion-avatar>
       <ion-label position="floating">Write a Comment</ion-label>
       <ion-textarea  [(ngModel)]="currentComment" ></ion-textarea>
-      <ion-icon class="send_comment" slot="end" name="send-outline"></ion-icon>
+      <ion-icon class="send_comment" slot="end" name="send-outline" (click)="reportComment()"></ion-icon>
     </ion-item>
     <ion-item-divider></ion-item-divider>
     <ion-item-sliding *ngFor="let comment of comments">
@@ -62,7 +62,7 @@
         </ion-label>
       </ion-item>
       <ion-item-options side="end">
-        <ion-item-option color="danger" (click)="reportComment()">Report
+        <ion-item-option color="danger" >Report
           <ion-icon name="alert-circle-outline">
           </ion-icon>
         </ion-item-option>
