--- a/src/app/pages/entities/event/event-content/event-content.page.html
+++ b/src/app/pages/entities/event/event-content/event-content.page.html
@@ -12,6 +12,7 @@
 
 <ion-content>
   <img src="{{event.eventImage}}" />
+  <ion-icon class="reactBtn" name="heart-outline"></ion-icon>
   <ion-card-content>
     {{event.eventDescription}}
   </ion-card-content>
@@ -36,6 +37,9 @@
     <ion-note slot="start">Participants</ion-note>
     <ion-label>{{event.participants}}</ion-label>
   </ion-item> -->
+  <ion-item-divider>
+    Hearts &nbsp;<ion-icon class="reactBtn2" name="heart-outline"></ion-icon>
+  </ion-item-divider>
   <ion-item-divider>
     Comments
   </ion-item-divider>
