--- a/src/app/pages/entities/event/event-content/event-content.page.scss
+++ b/src/app/pages/entities/event/event-content/event-content.page.scss
@@ -16,3 +16,16 @@ ion-avatar img {
 .vertically-aligned {
     margin-top: 8.5%
 }
+
+.reactBtn{
+  padding:20px;
+  position:absolute;
+  top:0;
+  right:0;
+  font-size: x-large;
+  cursor: pointer;
+  }
+
+  .reactBtn2 {
+    cursor: pointer;
+  }
