Event Content - Reactions

--- a/src/app/pages/entities/event/event-content/event-content.page.html
+++ b/src/app/pages/entities/event/event-content/event-content.page.html
@@ -6,6 +6,7 @@
       <ion-chip>
         <ion-label>{{event.category}}</ion-label>
       </ion-chip>
+      <ion-icon name="menu" (click)="presentActionSheet()"></ion-icon>
     </ion-item>
   </ion-toolbar>
 </ion-header>
