--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,8 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+
+.disabled-item {
+    pointer-events: none;
+    opacity: .5;
+}
