--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -59,3 +59,9 @@
   </ion-card>
 </ion-content>
 <!-- test commit-->
+
+<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="presentModal()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
