--- a/src/app/pages/entities/event/event-content/event-content.page.html
+++ b/src/app/pages/entities/event/event-content/event-content.page.html
@@ -78,8 +78,8 @@
           </ion-text>
         </ion-label>
       </ion-item>
-      <ion-item-options side="end">
-        <ion-item-option color="danger">Report
+      <ion-item-options side="end" *ngIf="!comment.isReported">
+        <ion-item-option color="danger" (click)="reportComment(comment.id)">Report
           <ion-icon name="alert-circle-outline">
           </ion-icon>
         </ion-item-option>
