--- a/src/app/pages/welcome/welcome.page.html
+++ b/src/app/pages/welcome/welcome.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
+    <ion-title class="text-center">
       {{ 'WELCOME_TITLE' | translate }}, Volunteer!
     </ion-title>
   </ion-toolbar>
@@ -11,7 +11,7 @@
   <div>
     <ion-button expand="block" routerLink="/login" id="signIn">{{ 'LOGIN' | translate }}</ion-button>
 
-    <p>{{ 'NO_ACCOUNT_MESSAGE' | translate }}</p>
+    <p class="text-center">{{ 'NO_ACCOUNT_MESSAGE' | translate }}</p>
     <ion-button expand="block" routerLink="/signup">{{ 'SIGNUP' | translate }}</ion-button>
   </div>
 </ion-content>
