--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -45,10 +45,10 @@
     <ion-grid>
       <ion-row>
         <ion-col>
-          <ion-item class="ion-text-center" color="tertiary" *ngIf="isParticipant(event)" disabled>
-            <ion-label>Participate</ion-label>
+          <ion-item class="ion-text-center" color="tertiary" *ngIf="isParticipant(event)" (click)="participate(event, $event)">
+            <ion-label>Remove participation</ion-label>
           </ion-item>
-          <ion-item class="ion-text-center" color="tertiary" *ngIf="!isParticipant(event)" (click)="participate(event.id, $event)">
+          <ion-item class="ion-text-center" color="tertiary" *ngIf="!isParticipant(event)" (click)="participate(event, $event)">
             <ion-label>Participate</ion-label>
           </ion-item>
         </ion-col>
