--- a/src/app/pages/home/create-event/create-event.page.html
+++ b/src/app/pages/home/create-event/create-event.page.html
@@ -52,7 +52,11 @@
       </ion-item>
       <ion-item>
         <ion-label position="floating">Location</ion-label>
-        <ion-input type="text" name="location" formControlName="location"></ion-input>
+        <ion-content padding>
+          <div id="map_canvas"></div>
+      </ion-content>
+      
+        <ion-input type="text" name="location"  formControlName="location">{{adress}}</ion-input>
       </ion-item>
     </ion-list>
   </form>
